hphp/test/slow/shapes/idx_arr_compat.php.expectf
array(1) {
  ["x"]=>
  int(1)
}

Notice: Hack Array Compat: Argument 1 to HH\Shapes::idx() must be of type darray, array given in %s/test/slow/shapes/idx_arr_compat.php on line 13
int(1)
array(1) {
  ["x"]=>
  int(1)
}
int(1)
array(1) {
  ["x"]=>
  int(1)
}
int(1)
object(HH\Map) (1) {
  ["x"]=>
  int(1)
}
int(1)

Fatal error: Uncaught exception 'Exception' with message 'done' in %s/test/slow/shapes/idx_arr_compat.php:15
Stack trace:
#0 (): main()
#1 {main}
